src/render/renderers/opengl/graphicshelpers/submissioncontext.cpp
@@ -885,7 +885,8 @@ int SubmissionContext::activateTexture(TextureScope scope, GLTexture *tex, int o
     // actually re-bind if required, the tex->dna on the unit not being the same
     // Note: tex->dna() could be 0 if the texture has not been created yet
     if (m_activeTextures[onUnit].texture != tex) {
-        QOpenGLTexture *glTex = tex->getOrCreateGLTexture();
+        // Texture must have been created and updated at this point
+        QOpenGLTexture *glTex = tex->getGLTexture();
         if (glTex == nullptr)
             return -1;
         glTex->bind(onUnit);
